@@ -61,6 +61,7 @@ Bug fixes
  * Direct usage of ``Document`` model replaced with ``get_document_model`` function in ``wagtail.contrib.wagtailmedusa`` and in ``wagtail.contrib.wagtailapi``
  * Failures on sending moderation notification emails now produce a warning, rather than crashing the admin page outright (Matt Fozard)
 * Fix: All admin forms that could potentially include file upload fields now specify ``multipart/form-data`` where appropriate (Tim Heap)
+* Fix: REM units in Wagtailuserbar caused incorrect spacing (Vincent Audebert)
 
 
 Upgrade considerations
